2008-02-14  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/GdkQuartzWindow.c: Set frame, not bounds when
	resizing to be consistent and to avoid introducing an internal
	transform in the view.

2008-02-13  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gtk/gtkclipboard-quartz.c: (gtk_clipboard_wait_for_contents):
	Remove unused variables.
	(gtk_clipboard_set_contents),
	(gtk_clipboard_get_owner), (clipboard_unset),
	(gtk_clipboard_request_targets): Notify the previous clipboard
	owner when the owner changes. Fixes bug #493406.

2008-02-13  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/gdkcolor-quartz.c: (gdk_colormap_alloc_colors): Fix
	the return value (return number of colors that failed), and handle
	RGBA colormap.
	(gdk_colormap_free_colors): Fix typo in comment.

2008-02-13  Emmanuele Bassi  <ebassi@gnome.org>

	Merge from trunk:

	* gtk/gtkrecentchoosermenu.c:
	(idle_populate_func), (idle_populate_clean_up): Fix possible
	recursion by resetting the idle source id. (#507605, William
	Pitcock)

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* configure.in: Bump version

	* === Released 2.12.8 ===

	* NEWS: Updates

2008-02-12  Matthias Clasen  <mclasne@redhat.com>

	* gtk/gtkpapersize.c:
	* gtk/gtkprintoperation.c:
	* gtk/gtkvolumebutton.c:
	* gtk/gtkbulderparser.c: Fix some i18n errors. Pointed
	out by Behdad Esfahbod.

2008-02-12  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.c
	* gdk/win32/gdkwindow-win32.h
	* gdk/win32/gdkwin32.h:
	Modal window rework.  (#455627, #511111, #514643, #514789)

2008-02-12  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_current_folder_uri):
	Check the return value of _gtk_file_chooser_get_file_system () for
	NULL before passing it to gtk_file_system_path_to_uri ().
	(#515667, Francesco Montorsi)
