@@ -2,6 +2,15 @@
 
 	Merged from trunk:
 
+	* gdk/quartz/gdkwindow-quartz.c: (get_fullscreen_geometry),
+	(gdk_window_hide), (gdk_window_fullscreen),
+	(gdk_window_unfullscreen): Make sure we leave fullscreen mode if
+	the window is hidden.
+
+2008-02-14  Richard Hult  <richard@imendio.com>
+
+	Merged from trunk:
+
 	* gdk/quartz/GdkQuartzWindow.c: Set frame, not bounds when
 	resizing to be consistent and to avoid introducing an internal
 	transform in the view.
